removing the unused option preprocess cause there is already preprocseed

--- a/test_preprocessing_omneeg.ipynb
+++ b/test_preprocessing_omneeg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "91d84a47-219c-41db-b779-4a83d25cc430",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "67c72c1b-d5e0-4c2e-b12d-67b4e9565e67",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1422421/594928380.py:39: FutureWarning: mne.io.pick.pick_info is deprecated will be removed in 1.6, use documented public API instead. If no appropriate public API exists, please open an issue on GitHub.\n",
+      "/tmp/ipykernel_3318958/7672293.py:36: FutureWarning: mne.io.pick.pick_info is deprecated will be removed in 1.6, use documented public API instead. If no appropriate public API exists, please open an issue on GitHub.\n",
       "  from mne.io.pick import pick_info\n"
      ]
     }
@@ -48,9 +48,6 @@
     "Examples:\n",
     "    # Extract HBN data from tar.gz, then run omneeg on raw data\n",
     "    python eeg_pipeline.py HBN /data/hbn/tar_files participant_001 /output /path/to/demo.csv --mode raw --extract_data\n",
-    "    \n",
-    "    # Run full pipeline: extract -> preprocess -> omneeg\n",
-    "    python eeg_pipeline.py HBN /data/hbn/tar_files participant_001 /output /path/to/demo.csv --mode preprocess --extract_data\n",
     "    \n",
     "    # Use already extracted/preprocessed data\n",
     "    python eeg_pipeline.py HBN /data/preprocessed participant_001 /output /path/to/demo.csv --mode preprocessed\n",
@@ -386,16 +383,7 @@
     "            elif ica_file.exists():\n",
     "                return ica_file\n",
     "        \n",
-    "        elif mode == 'preprocess':\n",
-    "            # After preprocessing, use the processed file\n",
-    "            process_file = self.output_folder / 'process' / self.participant / 'RestingState_epo.fif'\n",
-    "            if process_file.exists():\n",
-    "                return process_file\n",
-    "            \n",
-    "            # Fallback to ICA file\n",
-    "            ica_file = self.output_folder / 'ica' / self.participant / 'ica.fif'\n",
-    "            if ica_file.exists():\n",
-    "                return ica_file\n",
+    "\n",
     "        \n",
     "        return None\n",
     "    \n",
@@ -686,52 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "b37ba803-96fa-467d-b196-fb410fc3f510",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "usage: ipykernel_launcher.py [-h] [--mode {raw,preprocess,preprocessed}]\n",
-      "                             [--remove_channels] [--reconstruction]\n",
-      "                             [--preprocessing_script PREPROCESSING_SCRIPT]\n",
-      "                             [--omneeg_script OMNEEG_SCRIPT]\n",
-      "                             [--transform_module TRANSFORM_MODULE]\n",
-      "                             [--use_script] [--extract_data] [--task TASK]\n",
-      "                             [--log_level {DEBUG,INFO,WARNING,ERROR}]\n",
-      "                             database input_folder participant output_folder\n",
-      "                             demo_file\n",
-      "ipykernel_launcher.py: error: the following arguments are required: input_folder, participant, output_folder, demo_file\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "2",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/dubadr/pyvista_env/lib/python3.10/site-packages/IPython/core/interactiveshell.py:3587: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
-     ]
-    }
-   ],
-   "source": [
-    "if __name__ == '__main__':\n",
-    "    main()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "8710acf6-17ee-452f-b86b-6014e99c0e6a",
    "metadata": {},
    "outputs": [
@@ -739,11 +682,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-08-18 11:30:07,621 - __main__ - INFO - Created/verified folder: /home/dubadr/scratch/2seconds/HBN/raw\n",
-      "2025-08-18 11:30:07,624 - __main__ - INFO - Created/verified folder: /home/dubadr/scratch/2seconds/HBN/ica\n",
-      "2025-08-18 11:30:07,626 - __main__ - INFO - Created/verified folder: /home/dubadr/scratch/2seconds/HBN/process\n",
-      "2025-08-18 11:30:07,628 - __main__ - INFO - Created/verified folder: /home/dubadr/scratch/2seconds/HBN/log\n",
-      "2025-08-18 11:30:07,629 - __main__ - INFO - Created/verified folder: /home/dubadr/scratch/2seconds/HBN/omneeg\n"
+      "2025-08-23 14:35:01,271 - __main__ - INFO - Created/verified folder: /home/dubadr/scratch/2seconds/HBN/raw\n",
+      "2025-08-23 14:35:01,274 - __main__ - INFO - Created/verified folder: /home/dubadr/scratch/2seconds/HBN/ica\n",
+      "2025-08-23 14:35:01,276 - __main__ - INFO - Created/verified folder: /home/dubadr/scratch/2seconds/HBN/process\n",
+      "2025-08-23 14:35:01,278 - __main__ - INFO - Created/verified folder: /home/dubadr/scratch/2seconds/HBN/log\n",
+      "2025-08-23 14:35:01,280 - __main__ - INFO - Created/verified folder: /home/dubadr/scratch/2seconds/HBN/omneeg\n"
      ]
     }
    ],
@@ -754,34 +697,13 @@
     "    participant='NDARAA075AMK',  # Just the participant ID\n",
     "    output_folder='/home/dubadr/scratch/2seconds/HBN',\n",
     "    demo_file='/home/dubadr/scratch/2seconds/HBN/data.csv',\n",
-    "    extract_data_first=True\n",
+    "    extract_data_first=False\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "75ecf377-a6fa-4d95-8a4c-33c8bb1e291f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.EEGPipeline at 0x145f35967310>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pipeline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "073016d1-0246-43f9-93d0-5f4a96eb7b81",
    "metadata": {},
    "outputs": [
@@ -789,8 +711,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-08-18 11:30:09,283 - __main__ - INFO - Starting EEG pipeline in 'raw' mode for participant NDARAA075AMK\n",
-      "2025-08-18 11:30:09,284 - __main__ - INFO - Starting data extraction for HBN participant NDARAA075AMK\n",
+      "2025-08-23 14:46:41,349 - __main__ - INFO - Starting EEG pipeline in 'preprocessed' mode for participant NDARAA075AMK\n",
+      "2025-08-23 14:46:41,350 - __main__ - INFO - Starting data extraction for HBN participant NDARAA075AMK\n",
       "Starting data import\n",
       "Done data import\n",
       "Creating RawArray with float64 data, n_channels=129, n_times=182086\n",
@@ -804,7 +726,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1422421/594928380.py:205: RuntimeWarning: This filename (/home/dubadr/scratch/2seconds/HBN/raw/NDARAA075AMK/RestingState.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
+      "/tmp/ipykernel_3318958/594928380.py:205: RuntimeWarning: This filename (/home/dubadr/scratch/2seconds/HBN/raw/NDARAA075AMK/RestingState.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
       "  raw.save(raw_folder + '/' + participant_id + '/' + task + '.fif', overwrite=True)\n"
      ]
     },
@@ -814,42 +736,24 @@
      "text": [
       "Closing /home/dubadr/scratch/2seconds/HBN/raw/NDARAA075AMK/RestingState.fif\n",
       "[done]\n",
-      "2025-08-18 11:31:06,979 - __main__ - INFO - Data extraction completed successfully\n",
-      "2025-08-18 11:31:06,982 - __main__ - INFO - Starting omneeg transformation on /home/dubadr/scratch/2seconds/HBN/raw/NDARAA075AMK/RestingState.fif\n",
-      "2025-08-18 11:31:07,076 - __main__ - INFO - Successfully imported Interpolate from omneeg.transform\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/lustre06/project/6057506/dubadr/deephy/libs/OmnEEG/omneeg/transform.py:4: FutureWarning: mne.io.pick.pick_types is deprecated will be removed in 1.6, use documented public API instead. If no appropriate public API exists, please open an issue on GitHub.\n",
-      "  from mne.io.pick import pick_types\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2025-08-18 11:31:09,160 - __main__ - WARNING - Could not import get_demo from demo module: list index out of range\n",
-      "2025-08-18 11:31:09,162 - __main__ - INFO - Will create minimal demographics instead\n",
-      "2025-08-18 11:31:09,164 - __main__ - INFO - Loading epochs from: /home/dubadr/scratch/2seconds/HBN/raw/NDARAA075AMK/RestingState.fif\n",
-      "2025-08-18 11:31:09,165 - __main__ - INFO - Input appears to be raw data, creating fixed-length epochs\n",
-      "Opening raw data file /home/dubadr/scratch/2seconds/HBN/raw/NDARAA075AMK/RestingState.fif...\n",
-      "Isotrak not found\n",
-      "    Range : 0 ... 182085 =      0.000 ...   364.170 secs\n",
-      "Ready.\n",
-      "Reading 0 ... 182085  =      0.000 ...   364.170 secs...\n",
+      "2025-08-23 14:47:40,488 - __main__ - INFO - Data extraction completed successfully\n",
+      "2025-08-23 14:47:40,791 - __main__ - INFO - Starting omneeg transformation on /home/dubadr/scratch/2seconds/HBN/process/NDARAA075AMK/RestingState_epo.fif\n",
+      "2025-08-23 14:47:40,793 - __main__ - INFO - Successfully imported Interpolate from omneeg.transform\n",
+      "2025-08-23 14:47:40,803 - __main__ - WARNING - Could not import get_demo from demo module: list index out of range\n",
+      "2025-08-23 14:47:40,804 - __main__ - INFO - Will create minimal demographics instead\n",
+      "2025-08-23 14:47:40,806 - __main__ - INFO - Loading epochs from: /home/dubadr/scratch/2seconds/HBN/process/NDARAA075AMK/RestingState_epo.fif\n",
+      "Reading /home/dubadr/scratch/2seconds/HBN/process/NDARAA075AMK/RestingState_epo.fif ...\n",
+      "    Found the data of interest:\n",
+      "        t =       0.00 ...    2000.00 ms\n",
+      "        0 CTF compensation matrices available\n",
       "Not setting metadata\n",
-      "182 matching events found\n",
+      "89 matching events found\n",
       "No baseline correction applied\n",
       "0 projection items activated\n",
-      "Using data from preloaded Raw for 182 events and 1000 original time points ...\n",
-      "0 bad epochs dropped\n",
       "Sampling frequency of the instance is already 500.0, returning unmodified.\n",
-      "2025-08-18 11:31:09,415 - __main__ - INFO - Creating minimal demographics\n",
-      "2025-08-18 11:31:09,417 - __main__ - INFO - Channel names: ['E1', 'E2', 'E3', 'E4', 'E5']...\n",
-      "2025-08-18 11:31:09,418 - __main__ - INFO - Applying Interpolate transformation (32x32)\n"
+      "2025-08-23 14:47:41,119 - __main__ - INFO - Creating minimal demographics\n",
+      "2025-08-23 14:47:41,120 - __main__ - INFO - Channel names: ['E1', 'E2', 'E3', 'E4', 'E5']...\n",
+      "2025-08-23 14:47:41,122 - __main__ - INFO - Applying Interpolate transformation (32x32)\n"
      ]
     },
     {
@@ -864,13 +768,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-08-18 11:32:21,396 - __main__ - INFO - Saving transformed data to: /home/dubadr/scratch/2seconds/HBN/omneeg/NDARAA075AMK.h5\n",
-      "2025-08-18 11:40:01,748 - __main__ - INFO - Omneeg transformation completed successfully using direct method\n",
-      "2025-08-18 11:40:01,756 - __main__ - INFO - Pipeline completed successfully. Output: /home/dubadr/scratch/2seconds/HBN/omneeg/NDARAA075AMK.h5\n"
+      "2025-08-23 14:48:15,231 - __main__ - INFO - Saving transformed data to: /home/dubadr/scratch/2seconds/HBN/omneeg/NDARAA075AMK.h5\n",
+      "2025-08-23 14:52:16,675 - __main__ - INFO - Omneeg transformation completed successfully using direct method\n",
+      "2025-08-23 14:52:16,678 - __main__ - INFO - Pipeline completed successfully. Output: /home/dubadr/scratch/2seconds/HBN/omneeg/NDARAA075AMK.h5\n"
      ]
     }
    ],
    "source": [
+    "success = pipeline.run_pipeline(\n",
+    "    mode='preprocessed',\n",
+    "    remove_channels=False,\n",
+    "    reconstruction=False,\n",
+    "    use_transform_module=True  # Use direct import method\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64de07d7-88d9-473b-8824-0eaac230bddc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline = EEGPipeline(\n",
+    "    database='HBN',\n",
+    "    input_folder='/home/dubadr/projects/ctb-gdumas85/data/HBN/EEG',  # Note: should be the parent folder\n",
+    "    participant='NDARAA075AMK',  # Just the participant ID\n",
+    "    output_folder='/home/dubadr/scratch/2seconds/HBN',\n",
+    "    demo_file='/home/dubadr/scratch/2seconds/HBN/data.csv',\n",
+    "    extract_data_first=False\n",
+    ")\n",
+    "\n",
     "success = pipeline.run_pipeline(\n",
     "    mode='raw',\n",
     "    remove_channels=False,\n",
